--- a/crud/crud.csproj
+++ b/crud/crud.csproj
@@ -47,6 +47,12 @@
     <Compile Include="Datos\CONEXIONMAESTRA.cs" />
     <Compile Include="Datos\dunidades.cs" />
     <Compile Include="Logica\lunidades.cs" />
+    <Compile Include="Presentacion\sentencias_linq.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\sentencias_linq.Designer.cs">
+      <DependentUpon>sentencias_linq.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\Presentacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Presentacion\Presentacion.resx">
       <DependentUpon>Presentacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\sentencias_linq.resx">
+      <DependentUpon>sentencias_linq.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
